crates/sifr_python_parser/src/snapshots/sifr_python_parser__string__tests__missing_unicode_rbrace_error.snap
---
source: crates/sifr_python_parser/src/string.rs
expression: error
---
ParseError {
    error: Lexical(
        MissingUnicodeRbrace,
    ),
    location: 9..9,
}
