crates/sifr_python_parser/src/snapshots/sifr_python_parser__string__tests__parse_empty_fstring.snap
---
source: crates/sifr_python_parser/src/string.rs
expression: "parse_suite(r#\"f\"\"\"#).unwrap()"
---
[
    Expr(
        StmtExpr {
            range: 0..3,
            value: FString(
                ExprFString {
                    range: 0..3,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..3,
                                    elements: [],
                                    flags: FStringFlags {
                                        quote_style: Double,
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
