crates/sifr_python_parser/src/snapshots/sifr_python_parser__string__tests__parse_f_string_concat_4.snap
---
source: crates/sifr_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..31,
            value: FString(
                ExprFString {
                    range: 0..31,
                    value: FStringValue {
                        inner: Concatenated(
                            [
                                Literal(
                                    StringLiteral {
                                        range: 0..8,
                                        value: "Hello ",
                                        flags: StringLiteralFlags {
                                            quote_style: Single,
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                                FString(
                                    FString {
                                        range: 9..22,
                                        elements: [
                                            Literal(
                                                FStringLiteralElement {
                                                    range: 11..16,
                                                    value: "world",
                                                },
                                            ),
                                            Expression(
                                                FStringExpressionElement {
                                                    range: 16..21,
                                                    expression: StringLiteral(
                                                        ExprStringLiteral {
                                                            range: 17..20,
                                                            value: StringLiteralValue {
                                                                inner: Single(
                                                                    StringLiteral {
                                                                        range: 17..20,
                                                                        value: "!",
                                                                        flags: StringLiteralFlags {
                                                                            quote_style: Double,
                                                                            prefix: Empty,
                                                                            triple_quoted: false,
                                                                        },
                                                                    },
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: None,
                                                },
                                            ),
                                        ],
                                        flags: FStringFlags {
                                            quote_style: Single,
                                            prefix: Regular,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                                Literal(
                                    StringLiteral {
                                        range: 23..31,
                                        value: "again!",
                                        flags: StringLiteralFlags {
                                            quote_style: Single,
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
]
