crates/sifr_python_parser/src/snapshots/sifr_python_parser__string__tests__parse_fstring_nested_spec.snap
---
source: crates/sifr_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..15,
            value: FString(
                ExprFString {
                    range: 0..15,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..15,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..14,
                                                expression: Name(
                                                    ExprName {
                                                        range: 3..6,
                                                        id: "foo",
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: Some(
                                                    FStringFormatSpec {
                                                        range: 7..13,
                                                        elements: [
                                                            Expression(
                                                                FStringExpressionElement {
                                                                    range: 7..13,
                                                                    expression: Name(
                                                                        ExprName {
                                                                            range: 8..12,
                                                                            id: "spec",
                                                                            ctx: Load,
                                                                        },
                                                                    ),
                                                                    debug_text: None,
                                                                    conversion: None,
                                                                    format_spec: None,
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        quote_style: Double,
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
