crates/sifr_python_parser/src/snapshots/sifr_python_parser__string__tests__parse_fstring_nested_string_spec.snap
---
source: crates/sifr_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..13,
            value: FString(
                ExprFString {
                    range: 0..13,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..13,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..12,
                                                expression: Name(
                                                    ExprName {
                                                        range: 3..6,
                                                        id: "foo",
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: Some(
                                                    FStringFormatSpec {
                                                        range: 7..11,
                                                        elements: [
                                                            Expression(
                                                                FStringExpressionElement {
                                                                    range: 7..11,
                                                                    expression: StringLiteral(
                                                                        ExprStringLiteral {
                                                                            range: 8..10,
                                                                            value: StringLiteralValue {
                                                                                inner: Single(
                                                                                    StringLiteral {
                                                                                        range: 8..10,
                                                                                        value: "",
                                                                                        flags: StringLiteralFlags {
                                                                                            quote_style: Single,
                                                                                            prefix: Empty,
                                                                                            triple_quoted: false,
                                                                                        },
                                                                                    },
                                                                                ),
                                                                            },
                                                                        },
                                                                    ),
                                                                    debug_text: None,
                                                                    conversion: None,
                                                                    format_spec: None,
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        quote_style: Double,
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
