crates/sifr_python_parser/src/snapshots/sifr_python_parser__string__tests__parse_fstring_not_equals.snap
---
source: crates/sifr_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..11,
            value: FString(
                ExprFString {
                    range: 0..11,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..11,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..10,
                                                expression: Compare(
                                                    ExprCompare {
                                                        range: 3..9,
                                                        left: NumberLiteral(
                                                            ExprNumberLiteral {
                                                                range: 3..4,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                        ops: [
                                                            NotEq,
                                                        ],
                                                        comparators: [
                                                            NumberLiteral(
                                                                ExprNumberLiteral {
                                                                    range: 8..9,
                                                                    value: Int(
                                                                        2,
                                                                    ),
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        quote_style: Double,
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
